--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head><meta charset="utf-8" /></head>
-  <body><!-- overlay renders here --></body>
+  <body>
+  <div style="
+    font-family: sans-serif;
+    background: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    padding: 10px;
+    border-radius: 4px;
+    text-align: center;
+  ">
+    SQUAD SKINSSSS
+  </div>
+</body>
+
 </html>
